Change text to muted

--- a/index.html
+++ b/index.html
@@ -91,23 +91,23 @@
     </div>
   </header>
 
-  <section class="bg-dark" id="about">
+  <section id="about">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 text-center">
           <h2 class="section-heading light">An attempt to make the world greener</h2>
           <br>
           <h3>Solar Home at Georgia Tech</h3>
-          <p class="text-faded">
+          <p class="text-muted">
             Solar Home at Georgia Tech is a self sustaining solar powered house that will be built for the upcoming 2017 Department of Energy's Solar Decathlon competition.
           </p>
-          <p class="text-faded">
+          <p class="text-muted">
             Solar Home uses modular architectural approach to tackle uneven and unplanned urban growth while implementing best design and construction principles to minimize enenrgy consumption and maximize production. Solar Home also attempts to shape resident's
             habits to make not only a sustainable house, but also a sustainable citizen.
           </p>
           <hr class="primary">
           <h3>Solar Decathlon</h3>
-          <p class="text-faded">Solar Decathlon is an interdisciplinary competition organized by the Department of Energy where collegiate teams design and build cost efficient and sustainable solar powered houses. The next competition will be held in 2017.</p>
+          <p class="text-muted">Solar Decathlon is an interdisciplinary competition organized by the Department of Energy where collegiate teams design and build cost efficient and sustainable solar powered houses. The next competition will be held in 2017.</p>
           <br>
           <a href="#teams" class="btn btn-primary btn-xl page-scroll">Teams</a>
         </div>
@@ -115,7 +115,7 @@
     </div>
   </section>
 
-  <section class="bg-dark" id="teams">
+  <section id="teams">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -173,7 +173,7 @@
       </div>
     </div>
 
-    <div class="bg-dark container" id="team-description">
+    <div class="container" id="team-description">
       <div class="center-block" id="team-description-electrical">
         <div class="row row-centered">
           <div class="col-lg-12 col-md-12 text-center">
@@ -310,7 +310,7 @@
     </div>
   </section>
 
-  <section class="bg-dark">
+  <section>
     <div class="">
       <section class="no-padding" id="core_members">
         <div class="container-fluid">
@@ -411,7 +411,7 @@
     </div>
   </section>
 
-  <section class="bg-dark" id="contact_us">
+  <section id="contact_us">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 text-center">
