--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 text-center">
-          <h2 class="section-heading light">An attempt to make the world greener</h2>
+          <h2 class="section-heading text-primary">An attempt to make the world greener</h2>
           <br>
           <h3>Solar Home at Georgia Tech</h3>
           <p class="text-muted">
@@ -128,21 +128,21 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box" id="electrical-box">
-            <i class="fa fa-4x fa-th-large wow bounceIn light hvr-grow"></i>
+            <i class="fa fa-4x fa-th-large wow bounceIn text-primary hvr-grow"></i>
             <h3>Electrical</h3>
             <p class="text-muted">The team that shines.</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box" id="mechanical-box">
-            <i class="fa fa-4x fa-cog wow bounceIn light hvr-grow" data-wow-delay=".1s"></i>
+            <i class="fa fa-4x fa-cog wow bounceIn text-primary hvr-grow" data-wow-delay=".1s"></i>
             <h3>Mechanical</h3>
             <p class="text-muted">The pillars of Solar Home.</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box" id="computing-box">
-            <i class="fa fa-4x fa-link wow bounceIn light hvr-grow" data-wow-delay=".2s"></i>
+            <i class="fa fa-4x fa-link wow bounceIn text-primary hvr-grow" data-wow-delay=".2s"></i>
             <h3>Computing</h3>
             <p class="text-muted">Bringing the house to life.</p>
           </div>
@@ -151,21 +151,21 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box" id="architecture-box">
-            <i class="fa fa-4x fa-pencil wow bounceIn light hvr-grow" data-wow-delay=".3s"></i>
+            <i class="fa fa-4x fa-pencil wow bounceIn text-primary hvr-grow" data-wow-delay=".3s"></i>
             <h3>Architecture</h3>
             <p class="text-muted">Laying the groundwork.</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box" id="design-box">
-            <i class="fa fa-4x fa-heart wow bounceIn light hvr-grow" data-wow-delay=".4s"></i>
+            <i class="fa fa-4x fa-heart wow bounceIn text-primary hvr-grow" data-wow-delay=".4s"></i>
             <h3>Design</h3>
             <p class="text-muted">Making your heart skip a beat.</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box" id="business-box">
-            <i class="fa fa-4x fa-usd wow bounceIn light hvr-grow" data-wow-delay=".5s"></i>
+            <i class="fa fa-4x fa-usd wow bounceIn text-primary hvr-grow" data-wow-delay=".5s"></i>
             <h3>Business</h3>
             <p class="text-muted">Where the money lies.</p>
           </div>
@@ -178,7 +178,7 @@
         <div class="row row-centered">
           <div class="col-lg-12 col-md-12 text-center">
             <div class="service-box">
-              <i class="fa fa-4x fa-th-large light hvr-grow"></i>
+              <i class="fa fa-4x fa-th-large text-primary hvr-grow"></i>
               <h3>Electrical</h3>
             </div>
           </div>
@@ -201,7 +201,7 @@
         <div class="row row-centered">
           <div class="col-lg-12 col-md-12 text-center">
             <div class="service-box">
-              <i class="fa fa-4x fa-cog light hvr-grow"></i>
+              <i class="fa fa-4x fa-cog text-primary hvr-grow"></i>
               <h3>Mechanical</h3>
             </div>
           </div>
@@ -221,7 +221,7 @@
         <div class="row row-centered">
           <div class="col-lg-12 col-md-12 text-center">
             <div class="service-box">
-              <i class="fa fa-4x fa-link light hvr-grow"></i>
+              <i class="fa fa-4x fa-link text-primary hvr-grow"></i>
               <h3>Computing</h3>
             </div>
           </div>
@@ -241,7 +241,7 @@
         <div class="row row-centered">
           <div class="col-lg-12 col-md-12 text-center">
             <div class="service-box">
-              <i class="fa fa-4x fa-pencil light hvr-grow"></i>
+              <i class="fa fa-4x fa-pencil text-primary hvr-grow"></i>
               <h3>Architecture</h3>
             </div>
           </div>
@@ -263,7 +263,7 @@
         <div class="row row-centered">
           <div class="col-lg-12 col-md-12 text-center">
             <div class="service-box">
-              <i class="fa fa-4x fa-heart light hvr-grow"></i>
+              <i class="fa fa-4x fa-heart text-primary hvr-grow"></i>
               <h3>Design</h3>
             </div>
           </div>
@@ -284,7 +284,7 @@
         <div class="row row-centered">
           <div class="col-lg-12 col-md-12 text-center">
             <div class="service-box">
-              <i class="fa fa-4x fa-usd light hvr-grow"></i>
+              <i class="fa fa-4x fa-usd text-primary hvr-grow"></i>
               <h3>Business</h3>
             </div>
           </div>
@@ -415,7 +415,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 text-center">
-          <h2 class="section-heading light">Let's Get In Touch!</h2>
+          <h2 class="section-heading text-primary">Let's Get In Touch!</h2>
           <hr class="primary">
           <p>Ready to work with us? That's great! Click on one of the Team Leads above to send us an email and we will get back to you as soon as possible!</p>
         </div>
