--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="col-lg-8 col-lg-offset-2 text-center">
           <h2 class="section-heading text-primary">An attempt to make the world greener</h2>
           <br>
-          <h3>Solar Home at Georgia Tech</h3>
+          <h3 class="dark">Solar Home at Georgia Tech</h3>
           <p class="text-muted">
             Solar Home at Georgia Tech is a self sustaining solar powered house that will be built for the upcoming 2017 Department of Energy's Solar Decathlon competition.
           </p>
